Doc/force-app/main/default/objects/Product2/fields/Product_Line_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Text__c</fullName>
    <formula>Product_LineNew__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>