Doc/force-app/main/default/objects/Product2/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>This is a unique number for each product record.</description>
    <displayFormat>P-{000000}</displayFormat>
    <inlineHelpText>This is a unique number for each product record.</inlineHelpText>
    <label>Product Number</label>
    <type>AutoNumber</type>
</CustomField>