Doc/force-app/main/default/objects/Product2/fields/Product_Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Revenue_Type__c</fullName>
    <description>Do sales of this product contribute to Recurring or One-time revenue?</description>
    <formula>CASE( Product_Type__c , 
&quot;Services&quot;, &quot;One-time&quot;,
&quot;Services (Recurring)&quot;, &quot;Recurring&quot;,
&quot;Services Discount&quot;, &quot;One-time&quot;,
&quot;Software Discount (Recurring)&quot;,&quot;Recurring&quot;,
&quot;Software Discount (One-Time)&quot;,&quot;One-time&quot;,
&quot;Maintenance&quot;, &quot;Recurring&quot;,
&quot;Support&quot;, &quot;Recurring&quot;,
&quot;Software&quot;, 
   CASE( Product_License_Type__c,
   &quot;Annual&quot;, &quot;Recurring&quot;,
   &quot;Monthly&quot;, &quot;Recurring&quot;,
   &quot;Perpetual&quot;, &quot;One-time&quot;,
   &quot;Early Adopter&quot;,&quot;One-time&quot;,
   NULL),
&quot;Discount&quot;,
   CASE(  Discount_Type__c ,
   &quot;Recurring&quot;, &quot;Recurring&quot;,
   &quot;One-time&quot;, &quot;One-time&quot;,
   NULL),
NULL)</formula>
    <inlineHelpText>Do sales of this product contribute to Recurring or One-time revenue?</inlineHelpText>
    <label>Product Revenue Type</label>
    <type>Text</type>
</CustomField>