Doc/force-app/main/default/objects/Product2/fields/Product_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Product_Rollup__c</fullName>
    <label>Product Rollup</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line_Rollup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrate Limited License - On Prem</fullName>
            </value>
            <value>
                <fullName>Integrate - Box Builder</fullName>
            </value>
            <value>
                <fullName>Integrate - Smartlink</fullName>
            </value>
            <value>
                <fullName>Integrate - On Prem (Generic)</fullName>
            </value>
            <value>
                <fullName>Integrate Standard</fullName>
            </value>
            <value>
                <fullName>Attorny Acknowledgments</fullName>
            </value>
            <value>
                <fullName>Activity Tracker</fullName>
            </value>
            <value>
                <fullName>Advanced Conflicts Cloud</fullName>
            </value>
            <value>
                <fullName>Auditing Package</fullName>
            </value>
            <value>
                <fullName>Walls - On Prem (Generic)</fullName>
            </value>
            <value>
                <fullName>Multiple Products</fullName>
            </value>
            <value>
                <fullName>Confidentiality Package</fullName>
            </value>
            <value>
                <fullName>Standard (Connected) Conflicts Cloud</fullName>
            </value>
            <value>
                <fullName>Contractors</fullName>
            </value>
            <value>
                <fullName>Regulatory Reporting</fullName>
            </value>
            <value>
                <fullName>DMS Package</fullName>
            </value>
            <value>
                <fullName>Dynamic Groups</fullName>
            </value>
            <value>
                <fullName>Intake Standard - On Prem</fullName>
            </value>
            <value>
                <fullName>Lawyer Portal</fullName>
            </value>
            <value>
                <fullName>Legal Holds</fullName>
            </value>
            <value>
                <fullName>Intake - On Prem (Generic)</fullName>
            </value>
            <value>
                <fullName>Walls 2020 On-Prem (fka Advanced Security)</fullName>
            </value>
            <value>
                <fullName>Team Manager</fullName>
            </value>
            <value>
                <fullName>People, Places &amp; Printers</fullName>
            </value>
            <value>
                <fullName>Additional Security Extensions</fullName>
            </value>
            <value>
                <fullName>Wall Builder</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>eBillingHub Module</fullName>
            </value>
            <value>
                <fullName>Time Builder</fullName>
            </value>
            <value>
                <fullName>Self Maintaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>