Doc/force-app/main/default/objects/Product2/fields/Product_Rollup_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Rollup_Name__c</fullName>
    <formula>ProductRollup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Rollup Name</label>
    <type>Text</type>
</CustomField>