Doc/force-app/main/default/objects/Product2/fields/Product_Type_Sales__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Sales__c</fullName>
    <description>BIZ-45129</description>
    <label>Product Type Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Guided Selling</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>