Doc/force-app/main/default/objects/Product2/fields/Product_Used_in_Active_Contract__c.field-meta.xml
<CustomField>
    <fullName>Product_Used_in_Active_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Used in Active Contract</label>
    <type>Checkbox</type>
</CustomField>