Doc/force-app/main/default/objects/Product2/fields/ProductRollup__c.field-meta.xml
<CustomField>
    <fullName>ProductRollup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will carry the Product Rollup name from Product Rollup object (new object)</description>
    <label>Product Rollup</label>
    <referenceTo>Product_Rollup__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>