Doc/force-app/main/default/objects/Product2/fields/Rev_Rec_Forecast_Rule__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Forecast_Rule__c</fullName>
    <description>Rev Rec Forecast Rule from Item Master Product Object.</description>
    <formula>TEXT ( Item_Master_Product__r.Rev_Rec_Forecast_Rule__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rev Rec Forecast Rule</label>
    <type>Text</type>
</CustomField>