Doc/force-app/main/default/objects/Product2/fields/Revenue_Allocation_Group__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Allocation_Group__c</fullName>
    <description>Revenue Allocation Group from Item Master Product Object.</description>
    <formula>TEXT( Item_Master_Product__r.Revenue_Allocation_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Allocation Group</label>
    <type>Text</type>
</CustomField>