Doc/force-app/main/default/objects/Product2/fields/SBQQSC__EntitlementConversion__c.field-meta.xml
<CustomField>
    <fullName>SBQQSC__EntitlementConversion__c</fullName>
    <description>Determines when entitlements are generated for a product</description>
    <inlineHelpText>Indicates how this product is converted to an Entitlement upon Service Contract creation.</inlineHelpText>
    <label>Entitlement Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One per quote line</fullName>
            </value>
            <value>
                <fullName>One per unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>