Doc/force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Field to specify status of product, whether it is Active , Legacy or Retired.
Built according to user story BIZ-45081.</description>
    <inlineHelpText>Field to specify status of product, whether it is Active , Legacy or Retired.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>EOL</fullName>
                <isActive>false</isActive>
                <label>EOL</label>
            </value>
            <value>
                <fullName>Pilot</fullName>
                <isActive>false</isActive>
                <label>Pilot</label>
            </value>
            <value>
                <fullName>Production</fullName>
                <isActive>false</isActive>
                <label>Production</label>
            </value>
            <value>
                <fullName>Retired</fullName>
                <isActive>false</isActive>
                <label>Retired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>