Doc/force-app/main/default/objects/Product2/fields/Summary_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Summary_Product_Group__c</fullName>
    <label>Summary Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>