Doc/force-app/main/default/objects/Product2/fields/Sync_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_NetSuite__c</fullName>
    <description>Sync NetSuite checkbox from Item Master Product Object.</description>
    <formula>Item_Master_Product__r.Sync_NetSuite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync NetSuite</label>
    <type>Checkbox</type>
</CustomField>