Doc/force-app/main/default/objects/Product2/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <description>TaxCode from Item master product</description>
    <formula>Item_Master_Product__r.TaxCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avalara Tax Code</label>
    <type>Text</type>
</CustomField>