Doc/force-app/main/default/objects/Product2/fields/Tiered_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiered Pricing</label>
    <type>Checkbox</type>
</CustomField>