Doc/force-app/main/default/objects/Product2/fields/Timekeppers__c.field-meta.xml
<CustomField>
    <fullName>Timekeppers__c</fullName>
    <formula>IF(
  NOT(ISPICKVAL(Unit__c,&quot;Lawyers&quot;)),
  0,
  IF(
    OR(
      Quantity__c = 83,
      Quantity__c = 133,
      Quantity__c = 233
    ),
    ROUND(Quantity__c * 1.5,0),
    IF(
      Quantity__c = 67,
      100,
      IF(
        Quantity__c = 167,
        250,
        Quantity__c * 1.5
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timekeepers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>