Doc/force-app/main/default/objects/Product2/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>The record type to be used for products such as Wall Builder</description>
    <label>Product</label>
</RecordType>