Doc/force-app/main/default/objects/Product2/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>The record type to be used for services such as implementations.</description>
    <label>Service</label>
</RecordType>