Doc/force-app/main/default/objects/Product2/listViews/Advanced_Conflicts.listView-meta.xml
<ListView>
    <fullName>Advanced_Conflicts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Intapp_ID__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>equals</operation>
        <value>CO-00056</value>
    </filters>
    <label>Advanced Conflicts</label>
</ListView>