Doc/force-app/main/default/objects/Product2/listViews/All_Subscription_Products.listView-meta.xml
<ListView>
    <fullName>All_Subscription_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Intapp_ID__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SBQQ__ConfigurationType__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Guided_Selling_Type__c</columns>
    <columns>Product_Type_Sales__c</columns>
    <columns>Revenue_Type__c</columns>
    <columns>SBQQ__QuantityEditable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Intapp_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Software Products</label>
</ListView>