Doc/force-app/main/default/objects/Product2/listViews/Product_View_SC.listView-meta.xml
<ListView>
    <fullName>Product_View_SC</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Item_Master_Name__c</columns>
    <columns>Item_Master_Product__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_LineNew__c</columns>
    <columns>Product_Line_Text__c</columns>
    <columns>Business_Unit_New__c</columns>
    <filterScope>Everything</filterScope>
    <label>Product View SC</label>
</ListView>