Doc/force-app/main/default/objects/Product2/listViews/Products_Updated.listView-meta.xml
<ListView>
    <fullName>Products_Updated</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_LineNew__c</columns>
    <columns>Pricing_Basis__c</columns>
    <columns>Business_Unit_New__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Products Updated</label>
    <language>en_US</language>
</ListView>