Doc/force-app/main/default/objects/Product2/listViews/Quantity_Based.listView-meta.xml
<ListView>
    <fullName>Quantity_Based</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SBQQ__SubscriptionPricing__c</columns>
    <columns>Pricing_Basis__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Pricing_Basis__c</field>
        <operation>equals</operation>
        <value>Quantity based</value>
    </filters>
    <label>Quantity Based</label>
</ListView>